--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "hangman",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-simple-keyboard": "^3.2.59",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.0.1"
   },
